--- a/package.json
+++ b/package.json
@@ -38,8 +38,8 @@
     "build": "tsc && vite build",
     "preview": "vite preview"
   },
-  "dependencies": {
-    "solid-js": "^1.8.15"
+  "peerDependencies": {
+    "solid-js": ">=1.8.0"
   },
   "devDependencies": {
     "typescript": "^5.2.2",
